--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,8 @@ table {
     display: flex;
     justify-content: center;
     padding: 5px;
+    margin-bottom: 5px;
+    gap: 0px;
 }
 
 table th {
@@ -138,6 +140,17 @@ table td {
     height: 70px;
     margin: 10px;
 }
+
+.icon-eraser {
+    margin: 5px;
+    width: 15px;
+    height: 16px;
+}
+
+.td-opciones{
+    text-align: center;
+}
+
 /* Estilos formularios */
 
 .formulario{
