--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,11 @@
     /* Elimina los rellenos predeterminados*/
     box-sizing: border-box;
     /*Incluye borders y rellenos en el tamño total de los elementos*/
-    font-family: Arial, Helvetica, sans-serif;
-    /* Fuente predeterminada*/
 }
 
 /*Estilos para el Login*/
 body {
-    font-family: Lato, Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .inicio div {
@@ -21,27 +19,8 @@ body {
     margin-bottom: 5px;
 }
 
-.favicon {
-    height: 130px;
-    padding-top: 10vh;
-}
-
-.buttonlogin {
-    color: #c20000;
-    margin: 10px;
-    padding: 5px;
-    border-color: #c20000;
-    width: 170px;
-}
-
 h1 {
     color: #c20000;
-}
-
-.usuario,
-.contrasena {
-    text-align: left;
-    font-weight: 700;
 }
 
 /* Estilo navegacion */
@@ -68,7 +47,6 @@ h1 {
     margin-top: 10px;
     /*Espacio superior*/
 }
-
 
 .ul-navigation a {
     text-decoration: none;
@@ -99,25 +77,15 @@ h1 {
     padding: 5px;
     border-color: #c20000;
     width: 70px;
-}
-
-.icon-nav {
-    display: flex;
-    align-items: center;
-    justify-items: center;
-    margin: 5px;
-    width: 32px;
-    height: 32px;
+    cursor: pointer;
 }
 
 /* contenido tablas */
 
-table {
-    display: flex;
-    justify-content: center;
+
+.table {
     padding: 5px;
-    margin-bottom: 5px;
-    gap: 0px;
+    width: 100%;
 }
 
 table th {
@@ -144,7 +112,7 @@ table td {
 .icon-eraser {
     margin: 5px;
     width: 15px;
-    height: 16px;
+    height: 15px;
 }
 
 .td-opciones{
@@ -163,9 +131,17 @@ table td {
 
 .formulario label{
     font-weight: 600;
-    display: inline-block;
-    width: 100px;
-    text-align: right;
+    display: block;
+    width: 100%;
+    text-align: left;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 15px;
 }
 
 div.button {
@@ -173,20 +149,27 @@ div.button {
   }
 
 .button-send{
-    align-items: center;
-    color: #ffffff;
+    width: 30%;
+    padding: 10px;
     background-color: #c20000;
-    margin: 5px;
-    padding: 5px;
-    border-color: #c20000;
-    width: 70px;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 15px;
 }
 
 .button-clean{
-    color: #ffffff;
-    background-color: #c20000;
-    margin: 5px;
-    padding: 5px;
-    border-color: #c20000;
-    width: 70px;
+    width: 30%;
+    padding: 10px;
+    background-color: #656565;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 15px;
+}
+
+button:hover {
+    background-color: rgb(143, 56, 40);
 }
